base/src/test/resources/failure/levels/refparo5.aya.txt
In file $FILE:4:11 ->

  2 | 
  3 | struct TypeStruct : Type
  4 |   | type : Type
                 ^--^

Error: The level is expected to be <= 1 but it is actually 0

1 error(s), 0 warning(s).
What are you doing?
